@@ -1,3 +1,6 @@
+2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused
+
 2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)
 
